fixed buy now button on tablet

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -37,7 +37,7 @@
     top: 0;
     left: 100%;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -182,6 +182,9 @@ transform: scaleX(1);
   &:active {
     background-color: $green-hover;
     color: $primary-light;
+  }
+  @include tablet {
+    display: none;
   }
 }
 
